<resources>
    <string name="appName">Calculator</string>
    <string name="error">Error</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="comma">,</string>
    <string name="equality">=</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">×</string>
    <string name="division">÷</string>
    <string name="percent">%</string>
    <string name="plusMinus">±</string>
    <string name="AC">AC</string>
</resources>